--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -6,15 +6,15 @@
 .counter-btn {
   display: block;
   min-width: 160px;
-  padding: 16px 32px;
+  padding: 10px 32px;
   border: none;
   border-radius: 4px;
   color: #FFFFFF;
   background-color: rgb(39, 74, 139);
   font-size: 20px;
+  cursor: pointer;
 }
 
-.counter-btn:hover,
-.counter-btn:focus {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.counter-btn:hover {
+  filter: drop-shadow(0 0 1em #646cffaa);
 }
