--- a/src/components/Greeting/Greeting.css
+++ b/src/components/Greeting/Greeting.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  max-width: 500px;
+  margin-right: auto;
+  margin-left: auto;
   padding: 20px;
 }
 
@@ -12,6 +15,6 @@
 }
 
 .greeting-msg {
-  font-size: 18px;
+  font-size: 28px;
   font-weight: bold;
 }
