--- a/src/components/Counter/Counter.css
+++ b/src/components/Counter/Counter.css
@@ -1,5 +1,5 @@
 .counter-res {
-  font-size: 28px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -9,12 +9,16 @@
   padding: 10px 32px;
   border: none;
   border-radius: 4px;
-  color: #FFFFFF;
   background-color: rgb(39, 74, 139);
   font-size: 20px;
   cursor: pointer;
+  margin-bottom: 5px;
 }
 
-.counter-btn:hover {
-  filter: drop-shadow(0 0 1em #646cffaa);
+.counter-btn:disabled {
+  background-color: rgba(42, 42, 42, 0.5);
+}
+
+.counter-btn:hover :not(:disabled) {
+  filter: drop-shadow(0 0 .3em #646cffaa);
 }
